Code Cleanup. Redirect to signin if user attempts any page without login.

--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -22,7 +22,8 @@
 			--border-top:2px solid teal !important;
 			border:1px solid teal;
 			margin-right: 5px;
-			
+			background-color: #f2fbf7;
+
 		}
 		
 		a {
@@ -83,6 +84,7 @@
 		#content {
 			height:70px;
 			border-bottom:1px solid teal;
+			background: white !important;
 		}
 
 		.bold-span {
@@ -112,7 +114,7 @@
 		}
 
 		.card-actions {
-			background-color: #f2fbf7;
+			
 		}
 
 
