--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -4,6 +4,7 @@
 
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link rel="import" href="../common/aq-backtest-detail-item.html">
+<link rel="import" href="../common/aq-check-authentication">
 
 <dom-module id="aq-analyze-detail">
 	
@@ -11,6 +12,7 @@
 	</style>
 
 	<template>
+	 	<aq-check-authentication id='authItem'></aq-check-authentication>
 	 	<app-location route="{{route}}"></app-location>
 	    <app-route
 	        route="{{route}}"
@@ -54,7 +56,13 @@
 			},
 
 			_activeChanged: function(active, routeData) {
-				
+				if(active){
+					if(!this.$.authItem.checkHasToken()) {
+	         	 		this.fire('rt-changed',{route:'/user/signin'});
+		          		return;
+		          }
+		      	}
+
 				if (active && routeData) {
 					this.strategyId = routeData.strategyId;
 					this.backtestId = routeData.backtestId;
