--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -4,6 +4,7 @@
 <link rel='import' href='../../../bower_components/paper-radio-button/paper-radio-button.html'>
 <link rel='import' href='../../../bower_components/paper-tooltip/paper-tooltip.html'>
 
+<link rel='import' href='../common/aq-check-authentication.html'>
 <dom-module id='aq-community-home-searchbar'>
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
@@ -117,7 +118,8 @@
 	<template>
       		<!--div id="search" class="layout vertical"-->
 	    		<!--aq-dropdown vertical-offset=48 class="self-center" id='category_dd' options="[[categories]]"></aq-dropdown-->
-    			
+    			<aq-check-authentication id='authItem'></aq-check-authentication>
+
 	  			<div id="search" class="layout horizontal">
 	  				
   					<div id="searchdiv">
@@ -177,7 +179,7 @@
 			},
 
 			onSearch: function(e) {
-				
+              
                 this.fire('search-action', {text: this.searchValue, category: this.selectedCategory > 0 ? this.categories[this.selectedCategory].value : ""});
 
              	if(this.$.searchbox.value=="") {
@@ -192,6 +194,12 @@
                 this.$.searchdiv.style.display = 'none';
                 this.$.searchIcon.style.display = 'inline';
               } else {
+
+              	if (!this.$.authItem.checkHasToken()) {
+                  	this.fire('rt-changed',{route:'/user/signin'});
+                  	return;
+              	}
+              	
                 this.$.searchdiv.style.display = 'block';
                 this.$.searchIcon.style.display = 'none';
                 this.$.searchbox.focus();
