--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -3,6 +3,7 @@
 
 <link rel='import' href='../../icons/aq-iconset.html'>
 
+<link rel="import" href="../common/aq-check-authentication.html">
 <link rel="import" href="../aq-markdown-editor.html">
 <link rel="import" href="./aq-community-previewpost.html">
 <link rel="import" href="../../dialog/aq-community-attachbacktest-dialog.html">
@@ -56,7 +57,7 @@
   </style>
 
   <template>
-
+      <aq-check-authentication id='authItem'></aq-check-authentication>
       <template is='dom-if' if="[[preview]]">
           <aq-community-previewpost reply=1 thread-data="[[threadData]]"></aq-community-previewpost>  
       </template>
@@ -67,7 +68,7 @@
 
           <div id="attachedMessageDiv" class="layout horizontal self-end">
               <i class="self-end">[[attachedMessage]]</i>
-              <paper-icon-button id='removeIcon' class="self-end" title="Remove" on-tap='onRemoveAttached' icon="icons:remove-circle"></paper-icon-button>
+              <paper-icon-button id='removeIcon' class="self-end" title="Remove" on-tap='onRemoveAttached' icon="aq-icons:remove-circle"></paper-icon-button>
           </div>
 
           <paper-button id='attachButton' class="self-end" raised noink on-tap='onAttach'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
@@ -87,7 +88,7 @@
         </aq-community-attachbacktest-dialog>  
              
       <iron-ajax 
-          url="[[APIEndPoint]]/thread/{{threadId}}" 
+          url="[[computePostReplyThreadUrl(threadId)]]" 
           body="{{threadData}}" 
           method='POST' 
           id='postThreadQuery' 
@@ -122,8 +123,6 @@
           value:false,
         },
 
-        APIEndPoint:String,
-
       },
 
       listeners :{
@@ -131,38 +130,29 @@
         'edit-clicked':'onEdit',
         'submit-clicked':'postThread',
       },
-      
-      ready: function() {
-          var x = localStorage.getItem('my-app-storage');
-          var user = JSON.parse(x).user;
-          if (user.token) {
-            this.header = {
-              "aimsquant-token": user.token,
-              "Content-Type": "application/json"};  
-          }   
 
-          this.APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;     
+      computePostReplyThreadUrl: function(threadId) {
+          var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value; 
+          return APIEndPoint+'/thread/'+threadId; 
       },
 
       postThread: function() {
 
-          if (!this.header) {
-            this.router.go('user/signin',{lastRequest:('/dashboard/community/topics/[[threadId]]')});
-            return;
+          if (!this.$.authItem.checkHasToken()) {
+              this.fire('rt-changed', {route:'user/signin'});
           }
           
           if(this.processInput()) {
-            this.$.postThreadQuery.generateRequest();
-            this.onRemoveAttached();
-            this.preview = false;
+              this.header = this.$.authItem.getHeader();
+              this.$.postThreadQuery.generateRequest();
+              this.onRemoveAttached();
+              this.preview = false;
           } else {
               this.error = "Cannot post an empty reply. Please create a valid reply.";
           }
-          
       },
 
       onPostReplyResponse: function(e) {
-        console.log(e.detail.response);
         var replies = e.detail.response.replies;
         if (replies.length > 0) {
           this.fire('reply-added',{reply:replies[replies.length - 1]});  
@@ -170,7 +160,6 @@
       },
 
       onPostReplyError: function(e) {
-        console.log(e);
       },
 
       clearEditor: function() {
