--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -4,7 +4,7 @@
 
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link rel="import" href="../common/aq-backtest-detail-item.html">
-<link rel="import" href="../common/aq-check-authentication">
+<link rel="import" href="../common/aq-check-authentication.html">
 
 <dom-module id="aq-analyze-detail">
 	
