More bug fixes for firefox.  Following is the list of bugs. 1. Search wasn't working; 2.Attach backtest Dialog wasn't working consecutively; 3. Previous replies were added in new posts

--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -863,6 +863,7 @@
 		    },
 
 		    _backtestIdChanged: function(nId, oId) {
+		    	console.log("backtest Id :"+nId);
 		    	if(nId) {
 		    		if(this.active) {
 						this.reset();
