--- a/src/layouts/aq-editor-main.html
+++ b/src/layouts/aq-editor-main.html
@@ -120,7 +120,7 @@
         this.strategyData = {
             "name":"",
             "description":"",
-            "language":"python",
+            "language":"julia",
             "type": "",
             "code": "",};
 
